--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "git": "^0.1.5",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.0",
     "primeicons": "^6.0.1",
     "primereact": "^8.6.1"
