--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
+  "name": "pocart",
+  "description": "a really cool app",
+  "version": "1.0.0",
+  "engines": {
+    "node": "18.x"
+  }
+}
+{
   "dependencies": {
     "dotenv": "^16.0.3",
     "git": "^0.1.5",
