--- a/package.json
+++ b/package.json
@@ -6,5 +6,17 @@
     "mongoose": "^6.7.0",
     "primeicons": "^6.0.1",
     "primereact": "^8.7.0"
-  }
+  },
+  "name": "pocart",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "build": "cd backend && npm install  && cd ../frontend && npm install && npm run build",
+    "start": "node backend/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": "My Ecommerce Project"
 }
